# Boxedwine

./: .bazelignore  .bazelrc  .gitattributes  .gitignore  .gitmodules  .gitpod.yml  BUILD.bazel  BUILD.md  Jenkinsfile  README.md  WORKSPACE  buildFlags.txt  buildjs-sdl1.sh  changeLog.txt  commandLine.txt  patch.diff  todo.txt
.github/workflows/: linux-ci.yml
docs/: About.md  AheadOfTimeCompilation.md  CPUemulation.md  Developer-Debugging.md  How-To-Build-Boxedwine.md  How-To-Build-OSMesa-on-Mac.md  How-To-Build-Tiny-Core-Base.md  How-To-Build-Wine-FileSystem.md  How-To-Create-FileSystem-For-Web.md  NTSYNC-Implementation-Plan.md  Performance.md  Roadmap-Features.md  Troubleshooting-Games-Apps.md
include/: boxed.h  boxedwine.h  bufferaccess.h  cpuinfo.h  crc.h  devcdrom.h  devdsp.h  devfb.h  devinput.h  devmixer.h  devntsync.h  devnull.h  devpty.h  devsequencer.h  devtty.h  devurandom.h  devzero.h  ea.h  fpu.h  jit.h  kdspaudio.h  kdspaudio_math.h  kepoll.h  kerror.h  kevent.h  kfile.h  kfiledescriptor.h  kfilelock.h  kinotify.h  kmemory.h  knativeaudio.h  knativeinput.h  knativescreen.h  knativesocket.h  knativesynchronization.h  knativesystem.h  knativethread.h  knativewindow.h  knetlink.h  kobject.h  (+40 more)
lib/emscripten/: instructions.txt
lib/gl4es/: .gitignore  .travis.yml  Android.mk  CHANGELOG.md  CMakeLists.txt  COMPILE.md  MEDIA.md  README.md  README.txt  USAGE.md  _config.yml  bc_cat.h  test.cmake  version.h
lib/gl4es/debian/: README.Debian  README.source  changelog  control  copyright  libgl4es-dev.install  libgl4es.install  rules
lib/gl4es/debian/patches/: fix_lintian_error  series
lib/gl4es/include/: gl4esinit.h
lib/gl4es/include/EGL/: eglplatform.h
lib/gl4es/include/GL/: gl.h
lib/gl4es/spec/: build  gen.py
lib/gl4es/spec/template/: eglwrap.c.j2  gleswrap.c.j2  glextwrap.c.j2  glwrap.h.j2  glxfuncs.j2
lib/gl4es/spec/template/base/: copy_packed_call.j2  wrap.c.j2  wrap.h.j2
lib/gl4es/spec/yml/: gles-1.1.yml  glext-1.1.yml  glext-es2-1.1.yml
lib/gl4es/src/: CMakeLists.txt  config.h
lib/gl4es/src/agl/: agl.c  agl.h  amigaos.c  amigaos.h  lookup.c
lib/gl4es/src/egl/: egl.c  egl.h  lookup.c
lib/gl4es/src/gl/: arbconverter.c  arbconverter.h  arbgenerator.c  arbgenerator.h  arbhelper.c  arbhelper.h  arbparser.c  arbparser.h  array.c  array.h  attributes.h  blend.c  blend.h  blit.c  blit.h  buffers.c  buffers.h  build_info.c  build_info.h  const.h  debug.c  debug.h  decompress.h  depth.c  depth.h  directstate.c  directstate.h  drawing.c  enable.c  enum_info.h  envvars.c  envvars.h  eval.c  eval.h  face.c  face.h  fog.c  fog.h  fpe.c  fpe.h  (+84 more)
lib/gl4es/src/gl/math/: eval.h  matheval.c
lib/gl4es/src/gl/wrap/: gl4es.h  gl4eswraps.c  gles.c  gles.h  glstub.c  skips.h  stub.h
lib/gl4es/src/glx/: drmfunc.h  gbm.c  gbmfunc.h  glx.c  glx.h  glx_gbm.h  hardext.c  hardext.h  lookup.c  rpi.c  rpi.h  streaming.c  streaming.h  utils.c  utils.h
lib/gl4es/tests/: test.sh  tests.sh
lib/imgui/: imgui.h  imgui_widgets.cpp
lib/rtmidi/: RtMidi.cpp
lib/tiny-process/: .clang-format  CMakeLists.txt  README.md  examples.cpp  process_unix.cpp
lib/zlib/: deflate.c  trees.c
platform/linux/: dynamic.cpp  memory64.cpp  platform.cpp  platformOpenGL.cpp  platformThreads-armv8.cpp  platformThreads-x64.cpp  platformThreads.cpp
platform/mac/: atomic_ref.gcc.h  atomic_ref.h  audiounit.cpp  coremidi.cpp  knativecoreaudio.cpp  pixelformat.cpp
platform/sdl/: kdspaudio.cpp  knativeaudio.cpp  knativeaudiosdl.h  knativeinputSDL.cpp  knativeinputSDL.h  knativescreenGL.cpp  knativescreenSDL.cpp  knativescreenSDL.h  knativesynchronization.cpp  knativesystem.cpp  knativethread.cpp  knativewindow.cpp  kvulkanSDL.cpp  kvulkanSDL.h  sdlcallback.cpp  sdlcallback.h
platform/windows/: dynamic.cpp  kwindowsaudio.cpp  memory64.cpp  platform.cpp  platformOpenGL.cpp  platformThreads.cpp  winmidi.cpp
project/emscripten/: Jenkinsfile  boxedwine-shell-simple.js  boxedwine-shell.js  boxedwine-simple.html  boxedwine-wasm-jit-cache-analyze.mjs  boxedwine-wasm-jit-cache-pipeline.mjs  boxedwine-wasm-jit-cache-verify-merged.mjs  boxedwine-wasm-jit-module-broker.js  boxedwine-worker-audio.js  boxedwine.css  browserfs.boxedwine.js  buildInstructions.md  buildjs-aot.sh  buildjs-multiThreaded-zlib.sh  buildjs-multiThreaded.sh  buildjs-sdl1.sh  buildjs.sh  buildjsRegal.sh  buildjsgl4es.sh  buildtestjs.sh  createOfficialEmscriptenBuild.sh  fsfs.js  makefile  oauth_receiver.html  opfs.js  run-testjit-node.sh  server.mjs  shell.html  shellfs-multiThreaded.html  shellfs.html  shelltest.html  webgl_hacks.py
project/linux/: HowToBuildMac.txt  Jenkinsfile  boxedwine-shell.js  browserfs.min.js  build.sh  build64.sh  build64static.sh  buildInstructions.txt  buildMac.sh  buildMac64.sh  buildMacTest.sh  buildPocoLib.sh  buildRaspberry.sh  buildRaspberryTest.sh  buildjs_sdl2.sh  buildjs_webgl.sh  buildjsfs_sdl2.sh  buildtest.sh  createOfficialEmscriptenBuild.sh  fastAuto.sh  fastAuto64.sh  makefile  packager.py  shell.html  shellfs.html  shellfszip.html  zee-worker.js
project/mac-xcode/: Jenkinsfile  JenkinsfileArmv8  buildAutomation.sh  buildAutomation64.sh  buildRelease.sh  buildReleaseX64.sh  buildTest.sh  fastAuto.sh  fastAuto64.sh  fetchDepends.sh
project/msvc/: Jenkinsfile
project/serenity/: build.sh
source/io/: fs.cpp  fs.h  fsdiropennode.cpp  fsdiropennode.h  fsdynamiclinknode.cpp  fsdynamiclinknode.h  fsfilenode.cpp  fsfilenode.h  fsfileopennode.cpp  fsfileopennode.h  fsiso.cpp  fsiso.h  fsisoopennode.cpp  fsisoopennode.h  fsmemnode.cpp  fsmemnode.h  fsmemopennode.cpp  fsmemopennode.h  fsnode.cpp  fsnode.h  fsopennode.cpp  fsopennode.h  fsvirtualnode.cpp  fsvirtualnode.h  fsvirtualopennode.h  fszip.cpp  fszip.h  fszipnode.cpp  fszipnode.h  fszipopennode.cpp  fszipopennode.h
source/kernel/: kalloc.c  kepoll.cpp  kevent.cpp  kfile.cpp  kfiledescriptor.cpp  kfilelock.cpp  kinotify.cpp  kmemory.cpp  knativesocket.cpp  knetlink.cpp  kobject.cpp  kpoll.cpp  kprocess.cpp  kscheduler.cpp  ksignal.cpp  ksocket.cpp  ksocketdata.cpp  ksocketobject.cpp  ktimer.cpp  (+4 more)
tools/: BUILD.bazel  bazel_deps.bzl
(+1838 files in other folders)
